# ovirt-vmconsole

./: .gitignore  ChangeLog  Makefile.am  README  README.API  README.localization  README.md  automation.yaml  configure.ac  ovirt-vmconsole.spec.in
.copr/: Makefile
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/workflows/: ci.yaml
automation/: build-artifacts-manual.sh  build-artifacts.packages  build-artifacts.sh  check-patch.packages  check-patch.packages.el7  check-patch.packages.el8  check-patch.sh
po/: POTFILES.in
selinux-ovirt_vmconsole/: Makefile.am  ovirt_vmconsole.fc.in.in  ovirt_vmconsole.if  ovirt_vmconsole.te
src/: Makefile.am  spawn.in
src/ovirt-vmconsole-host/: Makefile.am  NOTICE.in  ovirt-vmconsole-host.conf.in.in
src/ovirt-vmconsole-host/ovirt-vmconsole-host-sshd/: Makefile.am  authorized_principals.in  ovirt-vmconsole-host-sshd.systemd.in.in  ovirt-vmconsole-host-sshd.sysv.in.in  sshd_config.in.in
src/ovirt-vmconsole-proxy/: Makefile.am  NOTICE.in  ovirt-vmconsole-proxy.conf.in.in  ssh_config.in.in
src/ovirt-vmconsole-proxy/ovirt-vmconsole-proxy-sshd/: Makefile.am  ovirt-vmconsole-proxy-sshd.in  ovirt-vmconsole-proxy-sshd.systemd.in.in  ovirt-vmconsole-proxy-sshd.sysv.in.in  sshd_config.in.in
src/ovirt_vmconsole/: Makefile.am
src/ovirt_vmconsole/common/: Makefile.am  __init__.py  base.py  config.py.in.in  utils.py  validate.py
src/ovirt_vmconsole/ovirt_vmconsole_host_shell/: Makefile.am  __init__.py  __main__.py  socketproxy.py
src/ovirt_vmconsole/ovirt_vmconsole_proxy_keys/: Makefile.am  __init__.py  __main__.py
src/ovirt_vmconsole/ovirt_vmconsole_proxy_shell/: Makefile.am  __main__.py
tests/: utils_test.py  validate_test.py
